# spacemolt-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: account_manager.rs  account_session.rs  commands.rs  credential_store.rs  game_api.rs  game_state.rs  lib.rs  main.rs  mcp_client.rs  models.rs  ws_client.rs
