[package]
name = "spacemolt-viewer"
version = "0.1.0"
description = "Multi-account dashboard for the SpaceMolt AI agent MMO"
authors = ["equail"]
edition = "2021"
rust-version = "1.77"

# Tauri v2 native binary
[lib]
name = "spacemolt_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core + Stronghold plugin (encrypted credential storage — Decision #3)
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"

# Serde — lenient decoding of inconsistent server shapes (Decision #7 resilient decoding)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + WebSocket v2 (push-only — Decision #8)
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# MCP — official rmcp Rust SDK (Decision #4 — NOT hand-rolled JSON-RPC)
# rmcp 0.1 only had legacy SSE transport (GET-first, discover-endpoint).
# rmcp 2.x has StreamableHttpClientTransport (POST-to-single-endpoint,
# mcp-session-id header, SSE framing) — the correct MCP spec transport.
# Features: client + transport-streamable-http-client-reqwest (reqwest impl).
rmcp = { version = "2", features = ["client", "transport-streamable-http-client-reqwest"] }

# Credential storage — IOTA Stronghold (encrypted at rest, cross-platform).
# Used directly for Rust-side credential management (Decision #3).
# tauri-plugin-stronghold is kept for frontend IPC (load_store/create_store).
iota_stronghold = "2"

# Crypto primitives for key derivation (blake2b256 hash for Stronghold KeyProvider).
# Package name is iota-crypto, crate name is crypto.
iota-crypto = { version = "0.23", default-features = false, features = ["blake2b", "random"] }

# Zeroize for secure memory clearing of passwords/keys.
zeroize = { version = "1", features = ["zeroize_derive"] }

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

dirs-next = "2"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]